<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RFID实验平台</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_configuration">请先配置您的串口</string>
    <string name="error_security">对不起，您没有串口读取权限</string>
    <string name="error_unknown">串口因未知错误不能打开</string>
    <string name="get_data">各模块参数</string>
    <string name="Gps">GPS定位</string>
    <string name="Barcode_scanning">条码扫描</string>
    <string name="set_serial">串口设置</string>
    <string name="quit">退出</string>
    <string name="low_card">低频卡</string>
    <string name="high_card">高频卡</string>
    <string name="ulra_card">超高频卡</string>
    <string name="spi_card">2.4GHz</string>
    <string name="etc">舵\t机</string>
    <string name="guard">门\t禁</string>
    <string name="lowword">卡 序 列 号：</string>
    <string name="regis_card">注册卡号</string>
    <string name="unregis_card">解除绑定</string>
    <string name="clear_data">清除数据</string>
    <string name="back">返\t \t回</string>
    <string name="openwire">打开天线</string>
    <string name="closewire">关闭天线</string>
    <string name="findcard">寻卡查询</string>
    <string name="preventconflit">防止冲突</string>
    <string name="fixcard">选定卡</string>
    <string name="veritypassword">密钥验证</string>
    <string name="password">请输入密码</string>
    <string name="readbalan">读取余额</string>
    <string name="init">请输入初始金额</string>
    <string name="initword">初始化金额</string>
    <string name="deduction">请输入扣除金额</string>
    <string name="deductword">扣款付账</string>
    <string name="addhint">请输入充值金额</string>
    <string name="addword">充\t\t值</string>
    <string name="readsec">读扇区内容</string>
    <string name="secidtext">块数字</string>
    <string name="writesec">写扇区内容</string>
    <string name="writehint">请输入写入内容</string>
    <string name="readsecctr">读扇区控制块</string>
    <string name="ctrhintA">A密钥</string>
    <string name="ctrhintB">B密钥</string>
    <string name="writectr">修改密钥A</string>
    <string name="readultra">读取模块信息</string>
    <string name="tag">EPC号：</string>
    <string name="querytag">EPC查询</string>
    <string name="readtag">读取标签数据</string>
    <string name="writetag">写入标签数据</string>
    <string name="epcedit">Mem</string>
    <string name="textwarn">提示：\n\n保留区:4个字长.第0,1字是销毁密码,第2,3字为访问密码.可读可写\n\nEPC区:默认8个字长, 从第2个字开始开始表示 EPC号 .写EPC时起始地址从02开始.第0,1字是EPC的PC值和CRC16.可读可写.(不建议修改，修改之后可能会造成读卡失败)\n\nTID区:12个字长.出厂设定的ID号.可读不可写\n\n用户区:32个字长.可读可写\n\n初始密码为“00000000”,密码框不填默认为初始密码</string>
    <string name="etc_forwprd">正转</string>
    <string name="etc_back">反转 (刷卡也可进行反转)</string>
    <string name="etc_ctr">舵机方向：</string>
    <string name="cardnumber">开门卡号：</string>
    <string name="opentime">开门时间：</string>
    <string name="historytime">历史开门时间</string>
    <string name="addrtv">起始地址</string>
    <string name="lentv">读写字长</string>
    <string name="password1">访问密码</string>
    <string name="timetext">时间:</string>
    <string name="longitudetext">经度:</string>
    <string name="latitudetext">纬度:</string>
    <string name="scanner_msg">条码信息：</string>
    <string name="spi_msg">接收信息：</string>
    <string name="spi_time">接收时间：</string>
    <string name="standard_card">工作频率：125K/13.56 MHz/915MHz\n数据保存：>10年\n封装材料：PVC\n典型应用：人员管理、监狱管理、产品标识等</string>
    <string name="hitag1_label">芯片： Philips Hitag 1；工作频率：125 KHz\n存储容量：2048 bit，32 bit 唯一ID序列号\n读写距离：2.5～10cm；读写时间：1～2ms\n工作温度：－40℃～85℃\n擦写寿命：>100,000次\n数据保存：>10年\n封装材料：PVC、ABS、PET、PETG\n外形尺寸：ISO标准卡 85.6x54x0.80mm /中厚卡/厚卡\n典型应用：企业一卡通、学校管理、公交储值卡、高速公路收费、停车场、小区管理</string>
    <string name="white_label">工作频率：902至928 MHz\n读写时间：1～2ms\n工作温度：－20℃～85℃\n擦写寿命：>100,000次\n数据保存：>10年\n封装材料：ABS\n典型应用：高速公路收费、停车场、小区管理</string>
    <string name="circular_label1">工作频率：125K/13.56 MHz\n通讯协议：ISO/IEC18000-2\nISO/IEC18000-3、ISO/IEC15693\n数据保存：>10年\n读取距离：10cm\n典型应用：门禁、考勤、公用事业收费、通道控制、图书管理、停车场收费、食堂收费、畜牧、电子钱包、交通、医疗保健、物资管理等</string>
    <string name="circular_label2">工作频率：902至928MHz\n读写时间：1～2ms\n工作温度：－20℃～85℃\n擦写寿命：>100,000次\n数据保存：>10年\n封装材料：ABS\n典型应用：特殊物品管理</string>
    <string name="button_label">工作频率：125K/13.56 MHz\n通讯协议：ISO/IEC18000-2\nISO/IEC18000-3、ISO/IEC15693\n数据保存：>10年\n读取距离：10cm\n典型应用：门禁、考勤、公用事业收费、通道控制、图书管理、停车场收费、食堂收费、畜牧、电子钱包、交通、医疗保健、物资管理等</string>
    <string name="resistancetep_label">支持协议:ISO 15693-2,-3\n频率:13.56MHz±300kHz\n读/写磁场强度:112 dBμA/m /115 dBμA/m\n编程只读号码:64 bits\n工作温度: -25Cto+90°C\n内存容量:2k bits (64 x 32-bit blocks )\n最大使用次数:100,000；使用年限:10 years\n同时识别标签个数:50个/秒(与读写器/天线有关)\n尺寸:22±0.2mmx3±0.2mm\n重量:1.6±0.3grams\n材质:PPS, 黑色；防护等级:IP 68\n存储温度: -25°Cto +120°C；+160°C 50小时；+220°C 30秒\n振动：ISO/IEC 68.2.6 (10g, 10..2000Hz, 3 axis, 2.5h)\n机械冲击:ISO/IEC 68.2.27(100g,6ms,6axis,20times per axis)\n机械稳定性：轴向/径向\n压缩强度：1000N/500N(10秒，静态)\n等静压水压力：45巴(10小时)；洗涤周期：200\n耐化学性：典型的化学品使用的洗衣及干洗进程</string>
    <string name="dress_label">工作频率：125K/13.56MHz/2.4G\n数据保存：>10年\n封装材料：软硅胶\n典型应用：人员管理、监狱管理、产品、服装标识等</string>
    <string name="key_label">工作频率：125K/13.56MHz\n通讯协议：ISO/IEC18000-2\nISO/IEC18000-3、ISO/IEC15693、ISO14443A\n数据保存：>10年\n读取距离：10cm以内\n典型应用：门禁、考勤、公用事业收费、通道控制、图书管理、停车场收费、食堂收费、畜牧、电子钱包、交通、医疗保健、物资管理等</string>
    <string name="logo_label">工作频率：902至928 MHz\n读写时间：1～2ms\n工作温度：－20℃～85℃\n擦写寿命：>100,000次\n数据保存：>10年\n封装材料：PVC/滴胶\n典型应用：服装管理、物品管理</string>
    <string name="band_label">工作频率：125K/13.56 MHz/2.4G\n数据保存：>10年\n封装材料：软硅胶\n典型应用：人员管理、监狱管理、产品标识等</string>
    <string name="book_label">芯片： Philips I•CODE 2；工作频率：13.56 MHz\n存储容量：512 bit，16个分区，64 bit 唯一ID序列号\n读写距离：2.5～10cm；读写时间：1～2ms\n工作温度：－20℃～85℃\n擦写寿命：>100,000次；数据保存：>10年\n封装工艺：超声波自动植线/自动碰焊\n外形尺寸：ISO标准卡 45x45x0.80mm /中厚卡/厚卡\n封装材料：PVC、ABS、PET、PETG、0.13mm铜线\n典型应用：企业一卡通、学校管理、公交储值卡、高速公路收费、停车场、小区管理</string>
    <string name="implantable_label">工作频率：125KHz\n数据保存：>10年\n典型应用：植入动物体内</string>
    <string name="animalfoot_label">工作频率：125K\n数据保存：>10年\n封装材料：ABS\n典型应用：鸡、鸭、鸽子等动物管理</string>
    <string name="animalear_label">工作频率：125K/13.56 MHz\n读写时间：1～2ms\n工作温度：－20℃～85℃\n擦写寿命：>100,000次\n数据保存：>10年\n典型应用：猪、牛等各类动物耳标</string>
    <string name="highfrequencysticker_label">工作频率：13.56 MHz\n通信协议：ISO/IEC18000-3、ISO/IEC15693\n数据保存：>10年\n安装方式：带背胶粘贴\n典型应用：书籍、光盘、文件等标识</string>
    <string name="highfrequencyinly_label">工作频率：13.56 MHz\n读写时间：1～2ms\n工作温度：－20℃～85℃\n擦写寿命：>100,000次\n数据保存：>10年\n典型应用：可做二次封装；书籍、文件、档案管理</string>
    <string name="nail_label">工作频率：125KHz\n工作温度：－20℃～85℃\n数据保存：>10年\n典型应用：树木管理</string>
    <string name="logistics_label">工作频率：125K/13.56 MHz/915MHz\n数据保存：>10年\n封装材料：ABS\n典型应用：货物物流跟踪等</string>
    <string name="logistics_label2">工作频率：902-928 MHz\n读写时间：1～2ms\n工作温度：－20℃～85℃\n擦写寿命：>100,000次\n数据保存：>10年\n封装材料：ABS\n通信协议：ISO/IEC18000-6C\n典型应用：集装箱、木箱等物流跟踪管理</string>

</resources>