<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rfid"
    android:orientation="vertical" >
    <!-- android:background="#00ff00" #99ccff-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lowword"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/low_id"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:textSize="25sp"
            tools:ignore="TextFields" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/register_card"
            android:layout_width="wrap_content"
            android:layout_height="100dp"

            android:text="@string/regis_card"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/unregister_card"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:text="@string/unregis_card"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/clear_low"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:text="@string/clear_data"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>